[gd_scene load_steps=4 format=3 uid="uid://c5fo02of13hth"]

[ext_resource type="Script" path="res://scripts/menu-scripts/DifficultyMenu.gd" id="1_782u4"]
[ext_resource type="Texture2D" uid="uid://cv4elc0m0xoc3" path="res://assets/button_dark.png" id="1_ptiwr"]
[ext_resource type="FontFile" uid="uid://7pq2pwxvjmxw" path="res://assets/fonts/TMT-Paint-Regular.woff" id="2_qsgg6"]

[node name="DifficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_782u4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_right = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Easy" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_ptiwr")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/Easy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -8.5
offset_right = 26.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_qsgg6")
text = "Easy"

[node name="Medium" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_ptiwr")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/Medium"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -11.5
offset_right = 36.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_qsgg6")
text = "Medium"

[node name="Hard" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_ptiwr")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/Hard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.5
offset_right = 25.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_qsgg6")
text = "Hard"

[connection signal="pressed" from="VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_hard_pressed"]
