extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_easy_pressed():
	pass # Replace with function body.


func _on_medium_pressed():
	pass # Replace with function body.


func _on_hard_pressed():
	pass # Replace with function body.
